public/css/style.css
/*
  Theme Name: Imperial
  Theme URL: https://bootstrapmade.com/imperial-free-onepage-bootstrap-template/
  Author: BootstrapMade
  Author URL: https://bootstrapmade.com
*/
/*--------------------------------------------------------------
# General
--------------------------------------------------------------*/

.white{
  background: white;
}

#hero span{
  color: white;

}

.grey{
  background: grey;
}

html {
  margin: 0px;
  height: 100%;
  width: 100%;

  padding: 0;
}




body {

  color: #666666;
  font-family: 'Open Sans', sans-serif;
  width: 100%;
  margin: 0;
  padding: 0;

}

.fa{
  margin: 0px 8px;
  font-size: 24px;
}

a {
  color: #03c4eb;
  transition: 0.5s;
}

a:hover,
a:active,
a:focus {
  color: #03c5ec;
  outline: none;
  text-decoration: none;
}

p {
  padding: 0;
  margin: 0 0 30px 0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Raleway', sans-serif;
  font-weight: 400;
  margin: 0 0 30px 0;
  padding: 0;
}


/* @media (max-width: 992px) { 
  h2
{
  font-family: 'Raleway', sans-serif;
  font-weight: 400;

  padding: 0;
  font-size: 16px;
  height: 100px;
}
}


@media (min-width: 992px) { 
  h1
{
  font-family: 'Raleway', sans-serif;
  font-weight: 400;
  margin: 0 0 80px 0;
  padding: 0;
  font-size: 80px;
  height: 100px;
  
}
}


@media (max-width: 991px) { 
  h1
{
  font-family: 'Raleway', sans-serif;
  font-weight: 400;
  margin: 0 0 60px 0;
  padding: 0;
  font-size: 42px;
  height: 44px;
  
}
} */

/* Prelaoder */
#preloader {
  position: fixed;
  left: 0;
  top: 0;
  z-index: 999;
  width: 100%;
  height: 100%;
  overflow: visible;
  background: rgba(255, 255, 255, 0.021) /*url(../img/image2vector.svg) no-repeat center center*/;
}


/* Back to top button */
.back-to-top {
  position: fixed;
  display: none;
  background: rgba(0, 0, 0, 0.2);
  color: #fff;
  padding: 6px 12px 9px 12px;
  font-size: 16px;
  border-radius: 2px;
  right: 15px;
  bottom: 15px;
  transition: background 0.5s;
}

@media (max-width: 768px) {
  .back-to-top {
    bottom: 15px;
  }

  /*Ricard custom*/


  .hold {
    margin: 5px 1px;
  
  }
}
@media (max-width: 991px){

  .hold {
    margin: 5px 1px;
  }

}




.back-to-top:focus {
  background: rgba(0, 0, 0, 0.2);
  color: #fff;
  outline: none;
}

.back-to-top:hover {
  background: #03c4eb;
  color: #fff;
}

/*--------------------------------------------------------------
# Welcome
--------------------------------------------------------------*/




#hero {
  display: table;
  width: 100%;
  height: 100vh;
  /*background: url(../img/medipedi.jpg) top center fixed;*/
  /* background:  url(../img/IMG_9641-min.JPG) top center fixed; */
  background:  url(../img/gys1.png) top center fixed;
  background-size: cover;
  margin: 0;

}

@media (max-width: 600px)
{
  #hero {
    display: table;
    width: 100%;
    /* max-width: 420px; */
    height: 100vh;
    /*background: url(../img/medipedi.jpg) top center fixed;*/
    /*background:rgba(87, 0, 87, 0.9);*/
    /* background:  url(../img/IMG_9641-min.JPG) top center fixed; */
    background:  url(../img/gys1.png)  bottom center fixed;
   background-size: 2600px 1000px;
  }
}



/* #hero .hero-logo {
  margin-bottom: 120px;
} */


@media (max-width: 768px) { 
  #hero .hero-logo img {

  }
 }


#hero .hero-logo img {
 
  min-width: 280px;
  margin-top: 120px;

}


#hero .hero-container {

  /* background: rgba(204, 109, 198, 0.685); */
   /* background: rgba(168, 37, 185, 0.623); */
  /* background:  rgba(51, 51, 51, 0.473) ; */
  /* background: linear-gradient(
    rgba(36, 36, 36, 0.5),rgba(46, 204, 224, 0.2));  /* rgba(133, 27, 143, 0.3), */
    background:rgba(36, 36, 36, 0.35);
  /* background: rgba(241, 227, 241, 0.3);*/
  /*background: rgba(171, 50, 241, 0.8);*/
  display: table-cell;
  margin: 0;
  padding: 0;
  text-align: center;
  vertical-align: middle;
}

#hero h1 {
  margin: 20px 0 5px 0;
  font-weight: 700;
  line-height: 48px;
  font-size: 80px;
  text-transform: uppercase;
  color: #fff;
}

@media (max-width: 768px) {
  #hero h1 {
    font-size: 32px;
    line-height: 36px;
  }
}

#hero h2 {
  color: white; /*color changed 999*/
  margin-bottom: 50px;
}

@media (max-width: 768px) {
  #hero h2 {
    font-size: 18px;
    line-height: 26px;
    margin-bottom: 20px;
    height: 20px;
  }
  #hero h2 .rotating {
    display: block;
  }
}

#hero .rotating > .animated {
  display: inline-block;
}

#hero .actions a {
  font-family: 'Raleway', sans-serif;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 1px;
  display: inline-block;
  padding: 8px 20px;
  border-radius: 2px;
  transition: 0.5s;
  margin: 10px;
}

#hero .btn-get-started {
  background: #46A342;
  border: 2px solid #46A342;
  color: #fff;
  min-width:160px;
}

#hero .btn-get-started:hover {
  background: none;
  border: 2px solid #fff;
  color: #fff;
}

#hero .btn-services {
  border: 2px solid #fff;
  color: #fff;
  min-width:160px;
}

#hero .btn-services:hover {
  background: #46A342;
  border: 2px solid #46A342;
}

/*--------------------------------------------------------------
# Header
--------------------------------------------------------------*/



#header {
  /*background: #111;*/
  background: transparent;
  padding: 20px 0;
  height: 90px;
  margin: 0;
  z-index: 1000;
 
}

#header #logo {
  float: left;
}

#header #logo h1 {
  font-size: 36px;
  margin: 0;
  padding: 6px 0;
  line-height: 1;
  font-family: 'Raleway', sans-serif;
  font-weight: 700;
  letter-spacing: 3px;
  text-transform: uppercase;
}

#header #logo h1 a,
#header #logo h1 a:hover {
  color: #fff;
}

#header #logo img {
  padding: 0;
  margin: 0;
  max-height: 50px;
}

@media (max-width: 768px) {
  #header {
    height: 80px;
  }
  #header #logo h1 {
    font-size: 26px;
  }
  #header #logo img {
    max-height: 40px;
  }
}

.is-sticky #header {
  background: rgb(24, 24, 24);
  opacity: 1;
  width: 100%;
  /* background: rgba(0, 0, 0, 0.85);*/
}
/* ... */

